# activitymanager

./: .gitignore  CMakeLists.txt  README.md
desktop-support/: activitymanager.upstart  com.palm.activitymanager.service.prv
files/activities/: am-validator-activity.json
files/conf/: activitymanager.json
files/db8/kinds/: com.webos.service.activity
files/db8/permissions/: com.webos.service.activitymanager
files/launch/: activitymanager.conf.in  activitymanager.in  activitymanager.service.in
files/schema/: activitymanager.schema  where.schema
files/sysbus/: activitymanager.groups.json  com.webos.service.activitymanager.api.json  com.webos.service.activitymanager.groups.json  com.webos.service.activitymanager.perm.json  com.webos.service.activitymanager.proxy-agent.json.in  com.webos.service.activitymanager.role.json.in  com.webos.service.activitymanager.service.in
src/activitymanager/: ActivityManagerApp.cpp  ActivityManagerApp.h  CMakeLists.txt  Main.cpp  Main.h
src/activitymanager/activity/: Activity.cpp  Activity.h  ActivityExtractor.cpp  ActivityExtractor.h  ActivityManager.cpp  ActivityManager.h  ContinuousActivity.cpp  ContinuousActivity.h
src/activitymanager/activity/callback/: ActivityCallback.cpp  ActivityCallback.h
src/activitymanager/activity/requirement/: ProxyRequirement.cpp  ProxyRequirement.h
src/activitymanager/activity/schedule/: AbstractScheduleManager.cpp  AbstractScheduleManager.h  IntervalSchedule.cpp  IntervalSchedule.h  Schedule.cpp  Schedule.h  ScheduleManager.cpp  ScheduleManager.h
src/activitymanager/activity/state/: AbstractActivityState.cpp  AbstractActivityState.h  ActivityStateNone.cpp  ActivityStateNone.h  Test1.cpp  Test1.h
src/activitymanager/activity/trigger/: ConcreteTrigger.cpp  ConcreteTrigger.h  Matcher.cpp  Matcher.h  TriggerFactory.cpp  TriggerFactory.h  TriggerSubscription.cpp  TriggerSubscription.h
src/activitymanager/activity/trigger/matcher/: CompareMatcher.cpp  CompareMatcher.h  KeyMatcher.cpp  KeyMatcher.h  SimpleMatcher.cpp  SimpleMatcher.h  WhereMatcher.cpp  WhereMatcher.h
src/activitymanager/activity/type/: AbstractPowerActivity.cpp  AbstractPowerActivity.h  PowerActivity.cpp  PowerActivity.h  PowerManager.cpp  PowerManager.h
src/activitymanager/base/: AbstractCallback.cpp  AbstractCallback.h  AbstractSubscription.cpp  AbstractSubscription.h  BusId.cpp  BusId.h  IFakeCondition.h  IManager.h  IRequirement.h  IStringify.h  ITrigger.h  LunaCall.cpp  LunaCall.h  LunaURL.cpp  LunaURL.h  Subscriber.cpp  Subscriber.h  Timeout.cpp  Timeout.h
src/activitymanager/conf/: ActivityJson.h  ActivityServiceSchemas.h  ActivityTypes.cpp  ActivityTypes.h  Config.cpp  Config.h
src/activitymanager/db/: AbstractPersistCommand.cpp  AbstractPersistCommand.h  AbstractPersistManager.cpp  AbstractPersistManager.h  DB8Command.cpp  DB8Command.h  DB8CommandDB.h  DB8Manager.cpp  DB8Manager.h  ICompletion.h  PersistCommandDB.cpp  PersistToken.cpp  PersistToken.h  PersistTokenDB.cpp  PersistTokenDB.h
src/activitymanager/requirement/: Requirement.cpp  Requirement.h  RequirementManager.cpp  RequirementManager.h
src/activitymanager/service/: ActivityCategoryHandler.cpp  ActivityCategoryHandler.h  BusConnection.cpp  BusConnection.h  CallbackCategoryHandler.cpp  CallbackCategoryHandler.h  Category.h  PermissionManager.cpp  PermissionManager.h  Subscription.cpp  Subscription.h
src/activitymanager/tools/: ActivityMonitor.cpp  ActivityMonitor.h  ActivitySendHandler.cpp  ActivitySendHandler.h
src/activitymanager/util/: Logging.cpp  Logging.h  MojoObjectJson.cpp  MojoObjectJson.h  MojoObjectString.cpp  MojoObjectString.h  SchemaResolver.cpp  SchemaResolver.h
src/am-monitor/: CMakeLists.txt  Main.cpp
src/am-send/: CMakeLists.txt  Main.cpp
src/common/: CMakeLists.txt
src/common/conf/: Environment.h.in  Setting.cpp  Setting.h
unit_test/: CMakeLists.txt  Main.cpp
unit_test/activitymanager/base/: Unittest_LunaUrl.cpp
unit_test/activitymanager/util/: Unittest_MojoObjectJson.cpp
